--- a/modules/contrib/ctools/ctools.info.yml
+++ b/modules/contrib/ctools/ctools.info.yml
@@ -1,11 +1,13 @@
-name: Chaos tools
+name: Chaos Tools
 type: module
 description: 'Provides a number of utility and helper APIs for Drupal developers and site builders.'
 package: Chaos tool suite
-# core: 8.x
+core: 8.x
+core_version_requirement: ^8 || ^9
+dependencies:
+  - drupal:system (>=8.5)
 
-# Information added by Drupal.org packaging script on 2017-04-28
-version: '8.x-3.0'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2020-04-01
+version: '8.x-3.3'
 project: 'ctools'
-datestamp: 1493401747
+datestamp: 1585762872
