--- a/modules/contrib/ctools/modules/ctools_block/ctools_block.info.yml
+++ b/modules/contrib/ctools/modules/ctools_block/ctools_block.info.yml
@@ -1,14 +1,13 @@
-name: Chaos tools blocks
+name: Chaos Tools Blocks
 type: module
 description: 'Provides improvements to blocks that will one day be added to Drupal core.'
 package: Chaos tool suite (Experimental)
 # version: 3.x
-# core: 8.x
+core: 8.x
 dependencies:
-  - ctools
+  - ctools:ctools
 
-# Information added by Drupal.org packaging script on 2017-04-28
-version: '8.x-3.0'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2020-04-01
+version: '8.x-3.3'
 project: 'ctools'
-datestamp: 1493401747
+datestamp: 1585762872
