--- a/modules/contrib/ctools/tests/modules/ctools_wizard_test/ctools_wizard_test.info.yml
+++ b/modules/contrib/ctools/tests/modules/ctools_wizard_test/ctools_wizard_test.info.yml
@@ -3,10 +3,9 @@ type: module
 description: 'Provides testing for ctools wizard'
 package: Testing
 # version: 3.x
-# core: 8.x
+core: 8.x
 
-# Information added by Drupal.org packaging script on 2017-04-28
-version: '8.x-3.0'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2020-04-01
+version: '8.x-3.3'
 project: 'ctools'
-datestamp: 1493401747
+datestamp: 1585762872
